[package]
name = "argon2-worker"
version = "0.1.0"
edition = "2021"
authors = ["Victor Mihalache <hey@veeque.dev>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
rust-argon2 = "2.1.0"
